# gecs-00-jupyter

./: Makefile  README.md  pixi.toml  pyproject.toml
notebooks/: 0.00-id-example.ipynb
